--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,31 @@
 .App {
-    text-align: center;
-    background-color: #152c47;
-    width: auto;
+    display: flex;
+    background-color: bisque;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     height: 40vh;
-    padding: 30vh;
+    width: 40vw;
+    border: 3px solid #fff;
+    border-radius: 10px;
 }
 
-.error {
-    border: red solid 2px;
-}
-
-.text {
-    color: white;
+.limit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    height: 130px;
+    /*border: 1px solid;*/
 }
 
 .limit span {
@@ -25,25 +39,55 @@
     border-radius: 5px;
 }
 
-.set {
-    border: 5px;
-    width: 7%;
-    height: 2em;
+.textLimit {
+    display: flex;
+    align-items: center;
     color: white;
-    text-shadow: 3px 3px 5px white;
-    background-color: mediumslateblue;
-    font-size: 15px;
-}
-.incReset {
-    border: 5px;
-    width: 7%;
-    height: 2em;
-    color: white;
-    text-shadow: 3px 3px 5px white;
-    background-color: mediumslateblue;
-    font-size: 15px;
-}
-.componentIncReset button {
-    border: 5px;
+    height: 40px;
 }
 
+.buttonSet {
+    padding: 5px;
+}
+
+.set {
+    border: 5px;
+    width: 70px;
+    height: 2em;
+    color: #36252f;
+    text-shadow: 3px 3px 5px black;
+    background-color: white;
+    font-size: 18px;
+    border-radius: 5px;
+}
+
+.componentIncReset {
+    display: flex;
+    width: 150px;
+    height: 50px;
+    /*border: 1px solid;*/
+    justify-content: space-around;
+    align-items: center;
+}
+
+.incReset {
+    border: 5px;
+    width: 70px;
+    height: 2em;
+    color: #36252f;
+    text-shadow: 3px 3px 5px black;
+    background-color: white;
+    font-size: 18px;
+    border-radius: 5px;
+}
+
+.error {
+    border: red solid 2px;
+}
+
+@media screen and (max-width: 1000px) {
+    .display {
+        width: 80vw;
+        height: 80vh;
+    }
+}
