--- a/src/components/Value.css
+++ b/src/components/Value.css
@@ -1,12 +1,21 @@
+.screenValue {
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    height: 125px;
+    align-items: center;
+    /*border: 1px solid;*/
+}
+
 .small {
     color: white;
-    font-size: 45px;
+    font-size: 50px;
     text-shadow: 2px 2px 3px black;
     text-align: center;
 }
 .big {
-    color: red;
-    font-size: 45px;
+    color: #a8171f;
+    font-size: 80px;
     text-shadow: 2px 2px 3px black;
     text-align: center;
 }
